k8s/apps/bandit/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandit
  labels:
    app: bandit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bandit
  template:
    metadata:
      labels:
        app: bandit
    spec:
      priorityClassName: low-priority
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - vps
      containers:
        - name: bandit
          image: ghcr.io/upayanmazumder/bandit:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 160Mi
            limits:
              cpu: 250m
              memory: 320Mi
