k8s/apps/bandit/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bandit-frontend
spec:
  selector:
    app: bandit
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: bandit-backend
spec:
  selector:
    app: bandit
  ports:
  - port: 5000
    targetPort: 5000
